# dockup

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build_script.sh  dockup.yaml
.codenvy/: project.json
.codenvy/runners/environments/Rust-Cargo-Run/: Dockerfile
dockup_utils/: Cargo.toml  build.rs
dockup_utils/src/: lib.rs  program_definition.in.rs
dockup_utils/src/config/: config_type.in.rs  load.rs  mod.rs
dockup_utils/src/docker/: mod.rs
dockup_utils/src/file/: mod.rs
dockup_utils/src/files/: mod.rs
dockup_utils/src/logger/: mod.rs
dockup_utils/src/program/: install.rs  mod.rs  run.rs
dockup_utils/src/system/: mod.rs
dockup_utils/src/system/resources/: exe_dockup.tmpl
dockup_utils/tests/: lib.rs
dockup_utils/tests/resources/: dockup-config.yaml
src/: lib.rs  main.rs
src/config/: load.rs  mod.rs  model.rs
src/logger/: mod.rs
src/program/: generate.rs
src/resources/: dockup_cli.yaml  program_call.tmpl
