[package]
name = "dockup_utils"
version = "0.1.0"
authors = ["Guillaume Renaudin <@RGuillome>"]
license = "MIT/Apache-2.0"
build = "build.rs"
include = ["src/resources/exec_dockup.tmpl"]

[features]

[dependencies]
log = "^0.3.6"
rustache = "0.1.0"
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"
serde_yaml = "0.4.1"
curl = "0.4.4"
rustc-serialize = "0.3"
